--- a/JS_modules_calendar/css/month.scss
+++ b/JS_modules_calendar/css/month.scss
@@ -1,19 +1,23 @@
 .fullyear {
     margin: 0 auto;
+    padding: 0 auto;
     text-align: center;
 
     .years {
+        width: 72vw;
         margin: 0 auto $text auto;
-        @include center(flex, row, center);
+        display: grid;
+        grid-template-columns: 10vw auto 10vw;
+        justify-content: space-between;
 
         .hide {
             visibility: hidden;
         }
 
         p {
-            margin: 0 auto;
-            font-size: $text*.5;
-            padding: $text*.3;
+            margin: auto;
+            font-size: $text*.8;
+            padding: $text*.2;
 
             border: 1px solid rgb(98, 173, 173) {
                 radius: 50%;
@@ -22,6 +26,11 @@
             color: rgb(98, 173, 173);
             text-align: center;
             @include center(flex, column, center);
+            cursor: pointer;
+        }
+
+        .namediary {
+            font-size: $text*1;
             cursor: pointer;
         }
 
@@ -34,58 +43,72 @@
     }
 
     .board1 {
-        width: 100%;
+
         margin: 0 auto;
-        @include center(flex, column, center);
+        @include center(flex, column, start);
 
         .mboard {
             margin: 0 auto;
-            // width: $text*90;
-            height: 100vh;
+            width: 90vw;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
 
-            .diary {
-                flex: 1;
+            .diary0 {
+                margin: 0 auto;
+                padding: 2vw auto;
+                width: 50vw;
+                flex: .8;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
 
-                .namediary {
-                    margin: 6.7vw 1vw 1.5vw 1vw;
-                    font-family: 'Dancing Script', cursive;
-                    font-weight: 300;
-                    font-size: 1vw;
-
+                .monthname {
+                    margin: 1.3vw 0 0vw 0;
+                    padding: 0vw;
+                    font-size: $text*1.3;
                 }
 
-                hr {
-                    margin: 0 1vw;
-                    border: .1px solid black;
-                }
+                .diary {
+                    flex: 1;
 
-                .texty,
-                .textm {
-                    font-family: 'Dancing Script', cursive;
-                    font-weight: 100;
-                    font-size: 1vw;
-                    margin: 3vw 1vw 1vw 1vw;
-                    padding: 1vw;
-                    border: 1px solid rgb(98, 173, 173);
-                    height: 23vw;
-                    overflow: scroll;
-                    text-align: start;
+                    .namediary {
+                        margin: 1vw 1vw 1.5vw 1vw;
+                        font-family: 'Dancing Script', cursive;
+                        font-weight: 300;
+                        font-size: 1.3vw;
+                    }
 
-                    p {
-                        font-family: inherit;
+                    hr {
+                        margin: 0 1vw;
+                        border: .1px solid black;
+                    }
+
+                    .texty,
+                    .textm {
+                        font-family: 'Dancing Script', cursive;
                         font-weight: 100;
                         font-size: 1vw;
-                        margin: .3vw auto;
+                        margin: 3vw 1vw 1vw 1vw;
+                        padding: 1vw;
+                        border: 1px solid rgb(98, 173, 173);
+                        height: 23vw;
+                        overflow: scroll;
+                        text-align: start;
 
-
-                        u {
+                        p {
                             font-family: inherit;
-                            font-weight: 200;
-                            font-size: 1.1vw;
-                            margin: 0 auto;
+                            font-weight: 100;
+                            font-size: 1vw;
+                            margin: .3vw auto;
+
+
+                            u {
+                                font-family: inherit;
+                                font-weight: 200;
+                                font-size: 1.1vw;
+                                margin: 0 auto;
+                            }
                         }
                     }
                 }
@@ -115,11 +138,6 @@
                         font-size: $text;
                         color: rgb(98, 173, 173);
                         padding: $text*.1;
-
-                        // border: 1px solid rgb(98, 173, 173) {
-                        //     radius: 50%;
-                        // }
-
                         @include center(flex, column, center);
 
                         .hide {
@@ -173,6 +191,14 @@
                 }
 
             }
+
+
+        }
+
+        .tomonth {
+            border: none;
+            background-color: transparent;
+            cursor: pointer;
         }
 
         .board {
