--- a/JS_modules_calendar/css/year.scss
+++ b/JS_modules_calendar/css/year.scss
@@ -18,81 +18,37 @@
 }
 
 .calendar {
-    text-align: center;
-    // width: 50vw;
-    height: 100vh;
-    margin: auto;
-    padding: auto;
-    @include center(flex, row, center);
-    // display: grid;
-    // grid-template-columns: repeat(10, 1fr);
-    // place-items: center center;
+    margin: 2vw auto;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    place-items: center center;
 
-    // .rotate {
-    //    
-    // // }
-    @for $i from 0 through 99 {
-        .year-#{99-$i} {
-            // position: relative;
-            font-size: 2vh;
+    .year {
+        margin: auto;
+        padding: auto;
+        width: 4vw;
+        height: 4vw;
+
+        border: 1px solid #ffff {
+            radius: 50%;
+        }
+
+        text-align: center;
+        @include center(flex, column, space-around);
+        background-color: rgb(165, 163, 158);
+        cursor: pointer;
+
+
+
+        &:hover {
+            background-color: transparent;
+        }
+
+        p {
+            font-size: $text;
             color: #ffff;
-            background-color: aqua;
-            transform: rotate(38deg) translate(1vh*.3*$i, 1vh*0.3);
-            margin: 0;
-            // padding: 0.3vh;
-            width: .2vh*$i;
-            height: .2vh*$i;
-
-            border: 1px solid #ffff {
-                radius: 50%;
-            }
-
-            text-align: center;
-            // @include center(flex, row, center);
-            @include center(flex, column, center);
-
-            background-color: rgb(165, 163, 158);
-            cursor: pointer;
-
-            &:hover {
-                background-color: transparent;
-            }
-
-            // p {
-            //     font-size: 1vh;
-            //     color: #ffff;
-            //     transform: rotate(-82deg);
-            // }
         }
     }
-
-
-    // .year {
-    //     margin: auto;
-    //     padding: auto;
-    //     width: 4vw;
-    //     height: 4vw;
-
-    //     border: 1px solid #ffff {
-    //         radius: 50%;
-    //     }
-
-    //     text-align: center;
-    //     @include center(flex, column, space-around);
-    //     background-color: rgb(165, 163, 158);
-    //     cursor: pointer;
-
-
-
-    //     &:hover {
-    //         background-color: transparent;
-    //     }
-
-    //     p {
-    //         font-size: $text;
-    //         color: #ffff;
-    //     }
-    // }
 
     .child {
         background-color: rgb(226, 225, 226);
